feat(socket.io): 实现Socket.IO客户端兼容层并添加测试页面
refactor(websocket): 重构WebSocket管理类以兼容Socket.IO协议

docs: 更新WebSocket兼容性文档和阿里云部署指南

test: 添加Socket.IO连接测试页面和相关测试脚本

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,6 @@
 {
   "pages": [
-    "pages/auth/index/index",
+    "pages/index/index",
     "pages/auth/login/login",
     "pages/user/profile/profile",
     "pages/user/orders/orders",
@@ -13,7 +13,8 @@
     "pages/electrician/apply/apply",
     "pages/common/map/map",
     "pages/common/chat/chat",
-    "pages/test/api-test/api-test"
+    "pages/test/api-test/api-test",
+    "pages/test/socketio-test/socketio-test"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -31,7 +32,7 @@
     "borderStyle": "black",
     "list": [
       {
-        "pagePath": "pages/auth/index/index",
+        "pagePath": "pages/index/index",
         "text": "首页",
         "iconPath": "images/tab/home.png",
         "selectedIconPath": "images/tab/home-active.png"
